# crypto-trader

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
data/: liquidation_log.txt
data/feeds/: __init__.py  base.py  binance.py  hyperliquid.py
data/models/: schema.sql
data/pipeline/: __init__.py  ingestor.py  validator.py
monitoring/grafana/dashboards/: data-feed-health.json
monitoring/prometheus/: prometheus.yml
research/: backtest_strategy1.py  backtest_strategy1_v2.py  backtest_strategy1_v3.py
research/results/: strategy1_results.json  strategy1_v2_results.json  strategy1_v3_results.json
scripts/: backfill_liquidations.py  fetch_historical.py  health_check.py  liquidation_cron_log.py  liquidation_status.py
tests/: test_feeds.py
